--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<div class='container' style="margin: 20%">
+<div class='container' style="margin: 5em">
   <%= yield %>
 </div>
 </body>
